<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="OutStream" Id="{756ac912-a9ec-4daa-b1e4-0f27d2726c76}">
    <Declaration><![CDATA[TYPE OutStream :
STRUCT
	ForceFan1_SetSpeed: LREAL;
	ForceFan2_SetSpeed: LREAL;
	ForceFan3_SetSpeed: LREAL;
	CondensePump_SetSpeed: LREAL;
	SupplyPump_SetSpeed: LREAL;
	CircularPump_SetSpeed: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>