<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="Parameters" Id="{f4668864-d891-48e2-9c5f-9350446d42e6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	PID_CondensePump_Press: PidParameter := (Kp:= 200, Ti:= 33.333, Td:= 0, Tn:= 0.05);
	PID_SupplyPump_Press: PidParameter := (Kp:= 40, Ti:= 8, Td:= 0.125, Tn:= 0.05);
	PID_Condenser_Temp: PidParameter := (Kp:= -40, Ti:= 53.333, Td:= 2.5, Tn:= 0.05);
	PID_LPHeater_Temp: PidParameter := (Kp:= 0.02, Ti:= 6.667, Td:= 2, Tn:= 0.5);
	PID_AirEjector_Temp: PidParameter := (Kp:= 0.0085, Ti:= 4.048, Td:= 0, Tn:= 0.5);
	PID_HPHeater_Temp: PidParameter := (Kp:= 0.0103, Ti:= 4.12, Td:= 0, Tn:= 0.5);
	PID_Turbine_Speed: PidParameter := (Kp:= 0.001, Ti:= 10, Td:= 100, Tn:= 100);
	PID_Furnace_Temp: PidParameter := (Kp:= 7, Ti:= 20, Td:= 1.4286, Tn:= 0.05);
	
	MaxSpeed_CondensePump: REAL := 1485;
	MaxSpeed_SupplyPump: REAL := 5645;
	MaxSpeed_CircularPump: REAL := 1500;
	MaxSpeed_ForceFan1: REAL := 1485;
	MaxSpeed_ForceFan2: REAL := 1485;
	MaxSpeed_ForceFan3: REAL := 1485;
	
	SampleTime: REAL := 0.1;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>