<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="PnID" Id="{10f77e3b-7018-4648-a34b-0c0909467aaf}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PnID
VAR
	ForceFan1: aFb_Motor;
	ForceFan2: aFb_Motor;
	ForceFan3: aFb_Motor;
	CondensePump: aFb_Motor;
	SupplyPump: aFb_Motor;
	CircularPump: aFb_Motor;
	LPHeaterValve: aFb_Valve;
	AirEjectorValve: aFb_Valve;
	HPHeaterValve: aFb_Valve;
	TurbineValve: aFb_Valve;
	
	

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Control all components in the P&ID 

//Pumps
{region "Condense Pump"}
CondensePump(RunCondition := AutoControl.CondensePump_Press.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.CondensePump_Press.Stop,
				SpeedCondition := AutoControl.CondensePump_Press.ControlSignal,
				RunFeedback := CondensePump.Cmd,
				Maxspeed := Parameters.MaxSpeed_CondensePump,
				ActualSpeed := Streams.InStream.CondensePump_Speed ,
				Speed => Streams.OutStream.CondensePump_SetSpeed);
{endregion}
{region "Supply Pump"}
SupplyPump(RunCondition := AutoControl.SupplyPump_Press.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.SupplyPump_Press.Stop,
				SpeedCondition := AutoControl.SupplyPump_Press.ControlSignal,
				RunFeedback := SupplyPump.Cmd,
				Maxspeed := Parameters.MaxSpeed_SupplyPump,
				ActualSpeed := Streams.InStream.SupplyPump_Speed,
				Speed => Streams.OutStream.SupplyPump_SetSpeed);
{endregion}
	 
{region "Circular Pump"}
CircularPump(RunCondition := AutoControl.Condenser_Temp.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.Condenser_Temp.Stop,
				SpeedCondition := AutoControl.Condenser_Temp.ControlSignal,
				RunFeedback := CircularPump.Cmd,
				Maxspeed := Parameters.MaxSpeed_CircularPump,
				ActualSpeed := Streams.InStream.CircularPump_Speed,
				Speed => Streams.OutStream.CircularPump_SetSpeed);
{endregion}


//Valves
{region "Low Pressure Heater Valve"}
LPHeaterValve(RunCondition := AutoControl.LPHeater_Temp.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.LPHeater_Temp.Stop,
				PercentCondition := AutoControl.LPHeater_Temp.ControlSignal,
				RunFeedback := LPHeaterValve.Cmd,
				OpenPercent => Streams.OutStream.LPHeaterValve_SetPercent);
{endregion}
	 
{region "Deaerator"}
AirEjectorValve(RunCondition := AutoControl.AirEjector_Temp.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.AirEjector_Temp.Stop,
				PercentCondition := AutoControl.AirEjector_Temp.ControlSignal,
				RunFeedback := AirEjectorValve.Cmd,
				OpenPercent => Streams.OutStream.AirEjectorValve_SetPercent);
{endregion}
{region "High Pressure Heater Valve"}
HPHeaterValve(RunCondition := AutoControl.HPHeater_Temp.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.HPHeater_Temp.Stop,
				PercentCondition := AutoControl.HPHeater_Temp.ControlSignal,
				RunFeedback := HPHeaterValve.Cmd,
				OpenPercent => Streams.OutStream.HPHeaterValve_SetPercent);
{endregion}
{region "Turbine Valve"}
TurbineValve(RunCondition := AutoControl.Turbine_Speed.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.Turbine_Speed.Stop,
				PercentCondition := AutoControl.Turbine_Speed.ControlSignal,
				RunFeedback := TurbineValve.Cmd,
				OpenPercent => Streams.OutStream.TurbineValve_SetPercent);
{endregion}


//Fans
{region "ForceFan1"}
ForceFan1(RunCondition := AutoControl.Boiler_Temp.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.Boiler_Temp.Stop,
				SpeedCondition := AutoControl.Boiler_Temp.ControlSignal,
				RunFeedback := ForceFan1.Cmd,
				Maxspeed := Parameters.MaxSpeed_ForceFan1,
				ActualSpeed := Streams.InStream.ForceFan1_Speed,
				Speed => Streams.OutStream.ForceFan1_SetSpeed);
{endregion}
	 
{region "ForceFan2"}
ForceFan2(RunCondition := AutoControl.Boiler_Temp.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.Boiler_Temp.Stop,
				SpeedCondition := AutoControl.Boiler_Temp.ControlSignal,
				RunFeedback := ForceFan2.Cmd,
				Maxspeed := Parameters.MaxSpeed_ForceFan2,
				ActualSpeed := Streams.InStream.ForceFan2_Speed,
				Speed => Streams.OutStream.ForceFan2_SetSpeed);
{endregion}
{region "ForceFan3"}
ForceFan3(RunCondition := AutoControl.Boiler_Temp.Start,
				Mode:= aE_Mode.Auto,
				StopCondition := AutoControl.Boiler_Temp.Stop,
				SpeedCondition := AutoControl.Boiler_Temp.ControlSignal,
				RunFeedback := ForceFan3.Cmd,
				Maxspeed := Parameters.MaxSpeed_ForceFan3,
				ActualSpeed := Streams.InStream.ForceFan3_Speed,
				Speed => Streams.OutStream.ForceFan3_SetSpeed);
{endregion}
]]></ST>
    </Implementation>
    <LineIds Name="PnID">
      <LineId Id="5" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="56" Count="3" />
      <LineId Id="321" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="76" Count="5" />
      <LineId Id="322" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="123" Count="1" />
      <LineId Id="126" Count="0" />
      <LineId Id="135" Count="5" />
      <LineId Id="323" Count="0" />
      <LineId Id="141" Count="2" />
      <LineId Id="216" Count="0" />
      <LineId Id="145" Count="1" />
      <LineId Id="155" Count="4" />
      <LineId Id="161" Count="1" />
      <LineId Id="179" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="172" Count="6" />
      <LineId Id="182" Count="0" />
      <LineId Id="191" Count="6" />
      <LineId Id="199" Count="0" />
      <LineId Id="208" Count="6" />
      <LineId Id="217" Count="1" />
      <LineId Id="125" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="229" Count="5" />
      <LineId Id="324" Count="0" />
      <LineId Id="235" Count="2" />
      <LineId Id="257" Count="0" />
      <LineId Id="266" Count="5" />
      <LineId Id="325" Count="0" />
      <LineId Id="272" Count="8" />
      <LineId Id="326" Count="0" />
      <LineId Id="281" Count="1" />
      <LineId Id="219" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>